Fix profile photo on mobile version to download from firebase

--- a/css/component-header-mobile.css
+++ b/css/component-header-mobile.css
@@ -65,6 +65,7 @@ header.component-header-mobile
     .user-profile {
     width: 24px;
     height: 24px;
+    border-radius: 50%;
 }
 
 
